--- a/.gitignore
+++ b/.gitignore
@@ -13,25 +13,23 @@
 # testing
 /coverage
 
-# next.js
+# next.js build output
 /.next/
 /out/
 
 # production
 /build
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# logs and debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
-# env files (can opt-in for committing if needed)
+# env files (keep a tracked template if you use one)
 .env*
+!.env.example
 
 # vercel
 .vercel
@@ -39,3 +37,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# editor settings
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# misc
+*.pem
